objects/LinkValidation__c.object
<CustomObject>
    <description>A list of links from Articles for the LinkValidation Engine to process</description>
    <fields>
        <fullName>Article_Mgmt_URL__c</fullName>
        <label>Article Mgmt URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Article_Number__c</fullName>
        <label>Article Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Article_Type_API__c</fullName>
        <label>Article Type API</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Article_Type_Label__c</fullName>
        <label>Article Type</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Article__c</fullName>
        <description>A Smart link to the original article</description>
        <formula>HYPERLINK( Original_Article_URL__c ,  Title__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Article</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Connection_Refused__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Connection Refused</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Checked__c</fullName>
        <label>Last Checked</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Link_Type__c</fullName>
        <label>Link Type</label>
        <picklist>
            <picklistValues>
                <fullName>Article</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SF Document</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intranet Doc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internet</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <label>Link</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Article_URL__c</fullName>
        <label>Original Article URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version_Number__c</fullName>
        <label>Version Number</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>is_Broken__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is Broken</label>
        <type>Checkbox</type>
    </fields>
    <label>ValidateLink</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Link__c</columns>
        <columns>Link_Type__c</columns>
        <columns>Original_Article_URL__c</columns>
        <columns>Title__c</columns>
        <columns>Version_Number__c</columns>
        <columns>is_Broken__c</columns>
        <columns>Connection_Refused__c</columns>
        <columns>Article_Type_Label__c</columns>
        <columns>Last_Checked__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Broken_Links</fullName>
        <columns>NAME</columns>
        <columns>is_Broken__c</columns>
        <columns>Connection_Refused__c</columns>
        <columns>Link_Type__c</columns>
        <columns>Link__c</columns>
        <columns>Article_Number__c</columns>
        <columns>Last_Checked__c</columns>
        <columns>Version_Number__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>is_Broken__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Broken Links</label>
    </listViews>
    <nameField>
        <displayFormat>LB-{00000000}</displayFormat>
        <label>LinkValidation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ValidateLinks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>